Add person and filter person
